<resources>
    <string name="app_name">Convert System</string>
    <string name="ae7070">#AE7070</string>
    <string name="_682929">#682929</string>
    <string name="inputValue">enter number</string>
    <string name="fakeBinaryValue">0</string>
    <string name="binary">Binary</string>
    <string name="fakeOctalValue">0</string>
    <string name="octal">Octal</string>
    <string name="fakeDecimalValue">0</string>
    <string name="decimal">Decimal</string>
    <string name="fakeHexaDecimalValue">0</string>
    <string name="hexaDecimal">Hexa Decimal</string>
    <string name="convertTitleButton">Convert</string>
    <string name="ok">OK</string>
    <string name="title">Worrying</string>
    <string name="message">pls! enter correct input , you select type : </string>


</resources>